# v-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  demo.py  eda_group_activity.py  pyproject.toml  requirements.txt  setup.py
config/: config.yaml  config_example_3dcnn.yaml  config_example_videomae.yaml  config_inference.yaml  config_videomae.yaml
v_ai/: data.py  dataset_videomae.py  inference_3dcnn.py  train.py  train_3dcnn.py  train_simplified.py  train_videomae_v2.py  transforms.py  utils.py
v_ai/models/: cnn.py  model.py  temporal.py  videomae_v2.py
v_ai/utils/: earlystopping.py  frames2video.py  utils.py
