[project]
name = "v-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Christopher Lin",email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"numpy",
"pandas",
"pillow",
"torch",
"torchvision",
"opencv-python (>=4.11.0.86,<5.0.0.0)",
"albumentations (>=2.0.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
